k8s/airbytes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte-ingress
  namespace: airbyte
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: "emissary"
  tls:
  - hosts:
    - airbyte.fannylimin.my.id
    secretName: airbyte-tls-0
  rules:
  - host: airbyte.fannylimin.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: airbyte-airbyte-webapp-svc
            port:
              number: 80
